# VelumCineris

./: .gitignore  AGENTS.md  CLAUDE.md  Orimond - Backgrounds.csv  Orimond - Feats.csv  Orimond - Species.csv  Orimond - Species_Appearance 1.csv  Orimond - Species_Appearance.csv  Orimond - Spells.csv  Orimond - Spells.mechanics_audit.csv  Orimond - Spells.mechanics_audit.md  Orimond - Spells.rebalance_audit.csv  Orimond - Spells.rebalance_report.md  Orimond - Spells.rebalanced.csv  Velum_Cineris;guide_to_orimond.json  compendium_fantasy.ipynb  omnibook.md  omnibook.txt  orimond_spell_compendium_rebalance_codex_plan.md  pyproject.toml
Book/: FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  book_api.py  book_generation.ipynb  cli.py  generate_working_book.py  generate_working_book.py.bak  google_docs_client.py  pyproject.toml  ruff.toml  styles.py  test_generation.py  test_species.py
Book/DOCS/: FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  README.md
Book/core/: README.md
Book/datasets/: __init__.py  sources.py  timeline_catalog.py
Book/exports/: __init__.py  writer_registry.py
Book/formatters/: __init__.py  backgrounds.py  classes.py  diseases.py  feats.py  items.py  languages.py  magic_items.py  monsters.py  species.py  spells.py  subclasses.py
Book/mappers/: __init__.py  formatter_registry.py
Book/scripts/: README.md  generate_deity_expansion_csv.py  generate_working_book.py
Book/services/: __init__.py  generation_service.py
Book/tests/: README.md  __init__.py  test_campaign_handbook.py  test_formatters.py  test_generation.py  (+4 more)
(+746 files in other folders)
