[project]
name = "VelumCineris_Book"
version = "0.1.0"
description = ""
authors = [
    {name = "Rocko",email = "vincent.a.bernier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "gspread>=6.2.1,<7.0.0",
    "google-api-python-client>=2.167.0,<3.0.0",
    "google-auth>=2.48.0,<3.0.0",
    "google-auth-httplib2>=0.2.0,<0.3.0",
    "google-auth-oauthlib>=1.2.1,<2.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
book-cli = "Book.cli:main"
